--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,5 +15,15 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+    <!-- hits 방문자수 -->
+  <a href="https://hits.seeyoufarm.com">
+    <style>
+      .hits {
+        width: auto; height: auto;
+        max-width: 99px;
+        max-height: 20px;
+      }
+    </style>
+    <img class="hits" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fickkou.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
   </div>
 {% endif %}
